--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,89 +1,52 @@
-/* <!--  Your task is to create a subscription price grid component in react.
-The app is basically divided in 3 boxes each with a distinguishing background color and text.
-The table should also have some CSS formatting.
-The upper box should have should have a CSS class '.community' and background color of "rgb(255, 253, 253)".
-The lower box on right side,should have CSS class '.why-us' and background color of "rgba(85, 145, 142, 0.698)".
-The lower box on left side,should have CSS class '.card' and background color of "rgb(15, 67, 66)".
-The div containing these boxes should have CSS class '.container' and have border radius of 11 px.
-Make sure you have exact text in the 'why us' box .  */
 * {
-  box-sizing: border-box;
-  margin: 0 auto;
-  font-family: Arial, Helvetica, sans-serif;
-}
-.container {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  border-radius: 11px;
-  margin: 20px auto 30px auto;
-}
-body {
-  background-color: rgb(24, 42, 59);
-}
-.item {
-  background-color: rgba(25, 255, 255, 0.8);
-  text-align: center;
-  font-size: 20px;
-}
-.card {
-  background-color: rgb(15, 67, 66);
-  height: 260px;
-  width: 400px;
-  padding: 0;
-  text-align: center;
-  color: #fff;
-  line-height: 25px;
-  border-radius: 0 0 0 11px;
-  font-size: 1.16em;
-}
-.why-us {
-  background-color: rgba(85, 145, 142, 0.698);
-  height: 260px;
-  width: 400px;
-  text-align: center;
-  padding: 0;
-  color: white;
-  border-radius: 0 0 11px 0;
-  font-size: 1.16em;
-}
-.community {
-  grid-column: 1 / span 2;
-  grid-row: 1;
-  background-color: rgb(255, 253, 253);
-  height: 250px;
-  width: 800px;
-  border-radius: 11px 11px 0 0;
-}
-.list {
-  list-style: none;
-  line-height: 25px;
-  padding: 0;
-  word-wrap: normal;
-}
-
-.why {
-  padding: 30px 20px 11px 20px;
-  font-weight: 50;
-}
-.subs {
-  padding: 30px 20px 11px 20px;
-}
-strong {
-  font-size: 40px;
-  padding: 10px;
-}
-.month {
-  padding: 10px;
-}
-button {
-  background-color: rgb(103 197 26);
-  width: 204px;
-  height: 42px;
-  color: white;
-  margin: 25px;
-  border-radius: 11px;
-  text-align: center;
-  font-size: 1.2em;
-  border: none;
-}
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  #main{
+      background-color: rgb(11, 11, 33);
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  
+  .container {
+    border-radius: 11px;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: 1fr;
+    width: 800px;
+    height: 500px;
+  }
+  
+  .community {
+    background-color: rgb(255, 253, 253);
+    text-align: center;
+  }
+  
+  .card{
+      background-color: rgb(15, 67, 66);
+  }
+  
+  .why-us{
+      background-color: rgba(85, 145, 142, 0.698);
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+  }
+  
+  .why-us-header{
+    text-align: center;
+  }
+  
+  .why-us-items{
+    list-style: none;
+    text-align: center;
+  }
+  
+  .card-details{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+  }
